peer2paper/grading/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: peer2paper
  labels:
    app.kubernetes.io/part-of: peer2paper
